--- a/about.html
+++ b/about.html
@@ -95,15 +95,14 @@ margin-top: 8px;
    }
    .container i{
       font-size: 20px;
-     
       color: rgb(56, 189, 241);
       animation-name:kiran;
       animation-delay: 1s;
       animation-duration: 2s;
       animation-iteration-count: infinite;
       animation-fill-mode: forwards;
-      animation-direction: alternate;
-      animation-timing-function: ease-out;
+      animation-direction: reverse;
+      animation-timing-function: linear;
     }
       @keyframes kiran{
         0%{transform:rotate(90deg);}
