--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       animation-iteration-count: infinite;
       animation-fill-mode: forwards;
       animation-direction: reverse;
-      animation-timing-function: ease-out;
+      animation-timing-function: linear;
     }
       @keyframes kiran{
         0%{transform:rotate(90deg);}
