--- a/weather.html
+++ b/weather.html
@@ -122,13 +122,13 @@ header{
       animation-duration: 2s;
       animation-iteration-count: infinite;
       animation-fill-mode: forwards;
-     animation-direction: reverse;
-      animation-timing-function: ease-out;
-      transition: all;
+      animation-direction: reverse;
+      animation-timing-function: linear;
     }
       @keyframes kiran{
-       0%{transform: rotate(90deg);}
-        100%{transform:rotate(180deg);}
+        0%{transform:rotate(90deg);}
+       
+        100%{transform:rotate(360deg);}
       }
     
     </style>
